--- a/Lap1/vuln/dockerfile
+++ b/Lap1/vuln/dockerfile
@@ -1,11 +1,17 @@
-FROM nginx:alpine
+FROM php:apache
 
-RUN rm -rf /etc/nginx/conf.d/*
+WORKDIR /var/www/html/
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./source /var/www/html/
 
-COPY . /usr/share/nginx/html
+RUN chown -R root:www-data /var/www/html && chmod 750 /var/www/html
+
+RUN find . -type f -exec chmod 640 {} \;
+
+RUN find . -type d -exec chmod 750 {} \;
+
+RUN chmod +t -R /var/www/html/
+
+RUN echo "PHOLAC{Th1s_1S_Fl3G_h3H5Ha}" >> /etc/passwd
 
 EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
