--- a/Lap1/docker-compose.yaml
+++ b/Lap1/docker-compose.yaml
@@ -3,8 +3,9 @@ version: '3'
 services:
   web:
     build: ./vuln
+    restart: unless-stopped
     ports:
-      - "1800:80"
+      - "8000:80"
     volumes:
-      - ./vuln:/var/www/html
+      - ./vuln/source:/var/www/html/
 
