--- a/Lap1/vuln/dockerfile
+++ b/Lap1/vuln/dockerfile
@@ -1,17 +1,12 @@
-FROM php:apache
+FROM php:8.0-apache
 
 WORKDIR /var/www/html/
 
-COPY ./source /var/www/html/
+COPY ./source .
 
-RUN chown -R root:www-data /var/www/html && chmod 750 /var/www/html
-
+RUN chown -R root:www-data /var/www/html
+RUN chmod 750 /var/www/html
 RUN find . -type f -exec chmod 640 {} \;
-
 RUN find . -type d -exec chmod 750 {} \;
 
-RUN chmod +t -R /var/www/html/
-
-RUN echo "PHOLAC{Th1s_1S_Fl3G_h3H5Ha}" >> /etc/passwd
-
-EXPOSE 80
+RUN apt-get update && apt-get install -y sqlite3 libsqlite3-dev
